cmake_minimum_required(VERSION 3.7.1)
project(cppfaq)

add_executable(
    q_1_efficient_insertion_in_vector
    q1.cpp
    )

add_executable(
    q_2_reverse_using_forward_iterators
    q2.cpp
    )

add_executable(
    q_3_swap_equal_length_sections
    q3.cpp
    )

add_executable(
    q_4_swapping_unequal_sections
    q4.cpp
    )

add_executable(
    q_7_shifting_back_and_forth
    q7.cpp
    )
